added route for comment-count
